edit any type variables & emit filterOptions

--- a/src/components/ShowDocuments/ShowDocuments.html
+++ b/src/components/ShowDocuments/ShowDocuments.html
@@ -3,6 +3,7 @@
     v-if="headers.length > 0"
     :headers="headers"
     :items="items"
+    disable-sort
     :items-per-page="50"
     @pagination="checkPageNumber"
     class="elevation-1"
