--- a/src/views/HomeView/HomeView.html
+++ b/src/views/HomeView/HomeView.html
@@ -1,9 +1,9 @@
 <div class="home-page">
-  <v-col cols="2">
+  <v-col v-if="possibleFilterOptions.length > 0" cols="2">
     <v-select
       class="show-documents__dropdown"
       v-model="selectedFilterOption"
-      label="Filter"
+      placeholder="Filter"
       :items="possibleFilterOptions"
       item-text="text"
       single-line
@@ -15,7 +15,7 @@
     ></v-select>
   </v-col>
   <div v-for="filter in selectedFilters">
-    <FilterQuery :filterName="filter"></FilterQuery>
+    <FilterQuery :filterName="filter" @delete-selected-filter="deletedFilterHandler"></FilterQuery>
   </div>
   <ShowDocuments @filter-options="filterOptionsHandler"></ShowDocuments>
 </div>
